Clean & Document Code

--- a/Portfolio Trading Strategy.ipynb
+++ b/Portfolio Trading Strategy.ipynb
@@ -248,20 +248,20 @@
    "outputs": [],
    "source": [
     "# Functions to calculate EMAs, MACD & Signal Line\n",
-    "def calculate_shortEMA(dataframe):\n",
-    "    ShortEMA = dataframe.Close.ewm(span=12, adjust=False).mean()\n",
+    "def calculate_shortEMA(df):\n",
+    "    ShortEMA = df.Close.ewm(span=12, adjust=False).mean()\n",
     "    return ShortEMA\n",
     "\n",
-    "def calculate_longEMA(dataframe):\n",
-    "    LongEMA = dataframe.Close.ewm(span=26, adjust=False).mean()\n",
+    "def calculate_longEMA(df):\n",
+    "    LongEMA = df.Close.ewm(span=26, adjust=False).mean()\n",
     "    return LongEMA\n",
     "\n",
-    "def calculate_MACD(dataframe):\n",
-    "    MACD = calculate_longEMA(dataframe) - calculate_shortEMA(dataframe)\n",
+    "def calculate_MACD(df):\n",
+    "    MACD = calculate_longEMA(df) - calculate_shortEMA(df)\n",
     "    return MACD\n",
     "\n",
-    "def calculate_signal(dataframe):\n",
-    "    signal = calculate_MACD(dataframe).ewm(span=9, adjust=False).mean()\n",
+    "def calculate_signal(df):\n",
+    "    signal = calculate_MACD(df).ewm(span=9, adjust=False).mean()\n",
     "    return signal"
    ]
   },
@@ -334,25 +334,25 @@
    "source": [
     "# Function to signal long/short signals\n",
     "\n",
-    "def buy_sell(dataframe):\n",
+    "def buy_sell(df):\n",
     "    Buy = []\n",
     "    Sell = []\n",
     "    Flag = -1 \n",
     "            \n",
-    "    for i in range(0, len(dataframe)):\n",
+    "    for i in range(0, len(df)):\n",
     "        # Go through each row to tell if the MACD line crosses the Signal Line\n",
-    "        if dataframe['MACD'][i] > dataframe['Signal Line'][i]:\n",
+    "        if df['MACD'][i] > df['Signal Line'][i]:\n",
     "            Sell.append(np.nan)\n",
     "            if Flag != 1:\n",
-    "                Buy.append(dataframe['Close'][i])\n",
+    "                Buy.append(df['Close'][i])\n",
     "                Flag = 1 #indicates we have been here\n",
     "            else:\n",
     "                Buy.append(np.nan)\n",
     "                \n",
-    "        elif dataframe['MACD'][i] < dataframe['Signal Line'][i]:\n",
+    "        elif df['MACD'][i] < df['Signal Line'][i]:\n",
     "            Buy.append(np.nan)\n",
     "            if Flag != 0:\n",
-    "                Sell.append(dataframe['Close'][i])\n",
+    "                Sell.append(df['Close'][i])\n",
     "                Flag = 0 #indicates we have been here\n",
     "            else:\n",
     "                Sell.append(np.nan)\n",
@@ -387,11 +387,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_signals(dataframe):\n",
+    "def plot_signals(df):\n",
     "    fig = plt.figure(figsize=(12, 6))\n",
-    "    plt.scatter(dataframe.index, dataframe['Buy_Signal_Price'], color='green', label='Buy', marker='^', alpha = 1)\n",
-    "    plt.scatter(dataframe.index, dataframe['Sell_Signal_Price'], color='red', label='Sell', marker='v', alpha = 1)\n",
-    "    plt.plot(dataframe['Close'], label='Close Price', color = 'black', alpha = 0.35)\n",
+    "    plt.scatter(df.index, df['Buy_Signal_Price'], color='green', label='Buy', marker='^', alpha = 1)\n",
+    "    plt.scatter(df.index, df['Sell_Signal_Price'], color='red', label='Sell', marker='v', alpha = 1)\n",
+    "    plt.plot(df['Close'], label='Close Price', color = 'black', alpha = 0.35)\n",
     "    plt.title('Closing Price Buy & Sell Signals')\n",
     "    plt.xlabel('Date')\n",
     "    plt.ylabel('Close Price USD ($)')\n",
@@ -437,25 +437,25 @@
    "source": [
     "# Backtesting\n",
     "\n",
-    "def backtesting(dataframe):\n",
+    "def backtesting(df):\n",
     "    # Extract out the index of each Buy & Sell price \n",
     "    Buy = []\n",
     "    Sell = []\n",
     "    \n",
-    "    for i in range(len(dataframe['Buy_Signal_Price'])):\n",
-    "               if not np.isnan(dataframe['Buy_Signal_Price'][i]):\n",
+    "    for i in range(len(df['Buy_Signal_Price'])):\n",
+    "               if not np.isnan(df['Buy_Signal_Price'][i]):\n",
     "                   Buy.append(i)\n",
     "                    \n",
-    "    for i in range(len(dataframe['Sell_Signal_Price'])):\n",
-    "               if not np.isnan(dataframe['Sell_Signal_Price'][i]):\n",
+    "    for i in range(len(df['Sell_Signal_Price'])):\n",
+    "               if not np.isnan(df['Sell_Signal_Price'][i]):\n",
     "                   Sell.append(i)\n",
     "                                \n",
     "    Realbuys = [i+1 for i in Buy] \n",
     "    Realsells = [i+1 for i in Sell]\n",
     "    \n",
     "    # Extract out the opening price for the day after the respective signals\n",
-    "    Buyprices = dataframe.Open.iloc[Realbuys]\n",
-    "    Sellprices = dataframe.Open.iloc[Realsells]\n",
+    "    Buyprices = df.Open.iloc[Realbuys]\n",
+    "    Sellprices = df.Open.iloc[Realsells]\n",
     "    \n",
     "    # Drop the signals if the selling signal is preceeded with no buying signal\n",
     "    # Applies for the signals if the buying signal is followed with no selling signal\n",
